# gopa

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  INSTALL.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MANIFEST.in  Makefile  QUICKSTART.md  README.md  RELEASE.md  RELEASE_READINESS.md  SECURITY.md  gopa  gopa.bat  install.bat  install.sh  pyproject.toml  requirements-dev.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: cron.gopa  hello.gopa  server.gopa  weather.gopa
gopa_lang/: __init__.py  ast_nodes.py  builtin_stdlib.py  gopa.py  graphics_stub.py  interpreter.py  lexer.py  packages.py  parser.py  permissions.py  runtime.py  tokens.py
gopa_lang/stdlib/: charts.gopa  colors.gopa  games.gopa  math.gopa  sounds.gopa  time.gopa  turtle.gopa
tests/: test_runner.py
tests/cases/: 01_basic_vars.gopa  02_if_otherwise.gopa  03_repeat_times.gopa  04_repeat_until.gopa  05_functions_return.gopa  06_recursion_factorial.gopa  07_lists_mutations.gopa  08_lists_filter_map.gopa  09_dictionary.gopa  10_strings.gopa  11_random.gopa  12_match.gopa  13_api_disabled_permission.gopa  14_graphics_stub_smoke.gopa  15_packages_local_install_use.gopa  16_python_ffi_allowlist.gopa  17_cron_registers_no_crash.gopa  18_server_routes_register_no_crash.gopa  19_jobs_register_stop.gopa
tests/expected/: 01_basic_vars.txt  09_dictionary.txt  10_strings.txt  11_random.txt  13_api_disabled_permission.txt  14_graphics_stub_smoke.txt  15_packages_local_install_use.txt  16_python_ffi_allowlist.txt  17_cron_registers_no_crash.txt  18_server_routes_register_no_crash.txt  19_jobs_register_stop.txt
