[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gopa-lang"
version = "0.2.0"
description = "Gopa Programming Language - A kid-friendly programming language"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Gopa Contributors"}
]
keywords = ["programming-language", "education", "beginner-friendly", "kids-coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Software Development :: Interpreters",
]
dependencies = []

[project.optional-dependencies]
network = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://gopa.dev"
Documentation = "https://gopa.dev/docs"
Repository = "https://github.com/gopa-lang/gopa"
Issues = "https://github.com/gopa-lang/gopa/issues"

[project.scripts]
gopa = "gopa_lang.gopa:main"

[tool.setuptools]
packages = ["gopa_lang"]

[tool.setuptools.package-data]
gopa_lang = ["stdlib/*.gopa"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

